<!--
  ~ MonsterStrikeQuickRecruiter is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MonsterStrikeQuickRecruiter is distributed in the hope that it will be useful,
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MonsterStrikeQuickRecruiter.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Striker Quick Recruiter</string>
    <string name="recruit">Recruit</string>
    <string name="extremeLuckOnly">ExtremeLuckOnly</string>
    <string name="appropriateRoleOnly">AppropriateRoleOnly</string>
    <string name="anyoneCan">AnyoneCan</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="share">Share</string>
    <string name="supportUs">Support Us</string>
    <string name="sourceCode">Source Code</string>
    <string name="useConditions">Use Conditions</string>
    <string name="thankYou">Thank You!</string>
    <string name="refresh">Refresh</string>
    <string name="ok">OK</string>
    <string name="teaching">Teaching</string>
    <string name="youNeedWatchTeaching">You Need Watch Teaching?</string>
    <string name="need">Need</string>
    <string name="notNeed">Not Need</string>
    <string name="willAutomaticSelect">Will Automatic Select</string>
    <string name="seconds">Seconds</string>
    <string name="copied">Copied</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="restore">Restore</string>
    <string name="recentStartLink">Recent Start  Link</string>
    <string name="switchTheme">Switch Theme</string>
    <string name="ordinalTheme">Ordinal Theme</string>
</resources>