<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MonsterStrikeQuickRecruiter is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MonsterStrikeQuickRecruiter is distributed in the hope that it will be useful,
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MonsterStrikeQuickRecruiter.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/refresh"
        android:id="@+id/refreshItem"
        android:icon="@drawable/ic_baseline_refresh_24"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/share"
        android:id="@+id/shareItem"
        android:icon="@drawable/ic_action_share_item"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/supportUs"
        android:id="@+id/supportUsItem"
        app:showAsAction="never"/>
    <item
        android:title="@string/sourceCode"
        android:id="@+id/sourceCodeItem"
        app:showAsAction="never"/>
    <item
        android:title="@string/useConditions"
        android:id="@+id/useConditionsItem"
        app:showAsAction="never"/>
    <item
        android:title="@string/teaching"
        android:id="@+id/teachingItem"
        app:showAsAction="never"/>
    <item
        android:title="@string/about"
        android:id="@+id/about"
        app:showAsAction="never"/>
</menu>